--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "homepage":"https://zaidaKary.github.io/GithubProfileClone",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://zaidaKary.github.io/ProyectoAimoGithub/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
@@ -18,9 +18,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject",
-    "lint": "eslint --ext .js src/",
-    "deploy":"gh-pages -d build"
+    "lint": "eslint --ext .js src/"
   },
   "eslintConfig": {
     "extends": "react-app"
